# django-local-ai

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  llmdb.sqlite3  manage.py  pyproject.toml  pyrightconfig.json  setup.cfg
apps/account/: api.py  apps.py  schemas.py  urls.py
apps/account/forms/: registration.py
apps/account/utils/: email.py  token.py
apps/base/: schemas.py
apps/llm/: admin.py  api.py  apps.py  const.py  dbrouter.py  langchain.py  llama.py  lm.py  models.py  schemas.py  tasks.py  urls.py  utils.py  views.py
apps/llm/management/commands/: initws.py
apps/llm/migrations/: 0001_initial.py  0002_lmtask.py  0003_lmtask_description.py
apps/llm/models/: __init__.py  inference_params.py  task.py
centrifugo/: config.json
frontend/: .gitignore  README.md  components.d.ts  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.vue  auth.ts  interfaces.ts  main.ts  router.ts  state.ts  ws.ts
frontend/src/components/: TheHeader.vue  TheLogin.vue
frontend/src/components/account/: LoginForm.vue  RegistrationForm.vue
frontend/src/views/: DemoView.vue  HomeView.vue  HttpView.vue  StreamingView.vue  TemplateView.vue
frontend/src/views/account/: LoginView.vue  (+3 more)
frontend/src/widgets/: FormCard.vue
main/: api.py  asgi.py  urls.py  wsgi.py
main/settings/: dev.py  local.py  settings.py  testing.py
main/templates/: active_email.html  index.html
requirements/: base.txt  dev.txt  production.txt
tests/: test_ninja_api.py  test_testcase.py  testcase.py
tests/account/: test_api.py  test_utils.py
(+16 files in other folders)
